--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
        
     
     <div id="map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15078.353856082635!2d72.8906491!3d19.1257017!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xacf72f56793d190a!2sWHITEHAT%20EDUCATION%20TECHNOLOGY%20PVT%20LTD!5e0!3m2!1sen!2sin!4v1573468987088!5m2!1sen!2sin" height="450" frameborder="0"  allowfullscreen=""></iframe>
-</div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1798.63004486112!2d80.18343089233254!3d13.08612192576617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5263f913e81ecb%3A0x64548bedd40aa737!2s3rd%20St%2C%20TS%20Krishna%20Nagar%2C%20J%20J%20Nagar%2C%20Mogappair%20East%2C%20Chennai%2C%20Tamil%20Nadu%20600037!5e0!3m2!1sen!2sin!4v1612259283119!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   <div id="details">
     <img src="https://lh3.googleusercontent.com/proxy/mDZ_ITBE3Q_W_GGsFG_WWVBucAVchECaIjRIiEU0mpmeczE8mGhkuz0Q66AzxNy6bui7t4G3yqL7JqvWxRV04lDJ6-WGPDekrpAfOjHpnZ7RbVhMlWyhurZdmgypfRk2pRz2C_cGuvMGI9ZP_A" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
     <h3>Principal Name: </h3>
